; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/extr_mt9m032.c_mt9m032_set_gain.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/extr_mt9m032.c_mt9m032_set_gain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mt9m032 = type { i32 }
%struct.i2c_client = type { i32 }

@MT9M032_GAIN_DIGITAL_MASK = common dso_local global i32 0, align 4
@MT9M032_GAIN_DIGITAL_SHIFT = common dso_local global i32 0, align 4
@MT9M032_GAIN_AMUL_SHIFT = common dso_local global i32 0, align 4
@MT9M032_GAIN_ANALOG_MASK = common dso_local global i32 0, align 4
@MT9M032_GAIN_ALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mt9m032*, i32)* @mt9m032_set_gain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mt9m032_set_gain(%struct.mt9m032* %0, i32 %1) #0 {
  %3 = alloca %struct.mt9m032*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.i2c_client*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.mt9m032* %0, %struct.mt9m032** %3, align 8
  store i32 %1, i32* %4, align 4
  %10 = load %struct.mt9m032*, %struct.mt9m032** %3, align 8
  %11 = getelementptr inbounds %struct.mt9m032, %struct.mt9m032* %10, i32 0, i32 0
  %12 = call %struct.i2c_client* @v4l2_get_subdevdata(i32* %11)
  store %struct.i2c_client* %12, %struct.i2c_client** %5, align 8
  store i32 51, i32* %6, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp slt i32 %13, 63
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  store i32 0, i32* %7, align 4
  %16 = load i32, i32* %4, align 4
  store i32 %16, i32* %8, align 4
  br label %20

17:                                               ; preds = %2
  store i32 1, i32* %7, align 4
  %18 = load i32, i32* %4, align 4
  %19 = sdiv i32 %18, 2
  store i32 %19, i32* %8, align 4
  br label %20

20:                                               ; preds = %17, %15
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* @MT9M032_GAIN_DIGITAL_MASK, align 4
  %23 = and i32 %21, %22
  %24 = load i32, i32* @MT9M032_GAIN_DIGITAL_SHIFT, align 4
  %25 = shl i32 %23, %24
  %26 = load i32, i32* %7, align 4
  %27 = and i32 %26, 1
  %28 = load i32, i32* @MT9M032_GAIN_AMUL_SHIFT, align 4
  %29 = shl i32 %27, %28
  %30 = or i32 %25, %29
  %31 = load i32, i32* %8, align 4
  %32 = load i32, i32* @MT9M032_GAIN_ANALOG_MASK, align 4
  %33 = and i32 %31, %32
  %34 = or i32 %30, %33
  store i32 %34, i32* %9, align 4
  %35 = load %struct.i2c_client*, %struct.i2c_client** %5, align 8
  %36 = load i32, i32* @MT9M032_GAIN_ALL, align 4
  %37 = load i32, i32* %9, align 4
  %38 = call i32 @mt9m032_write(%struct.i2c_client* %35, i32 %36, i32 %37)
  ret i32 %38
}

declare dso_local %struct.i2c_client* @v4l2_get_subdevdata(i32*) #1

declare dso_local i32 @mt9m032_write(%struct.i2c_client*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
